Correct menu icon and menu on small screen

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -56,6 +56,8 @@
         font-weight: bold;
         letter-spacing: 2px;
         opacity: 0;
+
+        transition: opacity $transitionStandart;
       }
       &:hover::before {
         opacity: 1;
