--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -10,6 +10,12 @@
     margin-bottom: 48px;
   }
   &__list {
+    @media (max-height: 500px) {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+
     list-style: none;
     margin-bottom: 48px;
   }
